# OIIA-goose

./: .gitignore  CMakeLists.txt  README.md  info.yaml
.github/workflows/: fpga.yaml
data/: extracted_goose.txt  goose.hex
docs/: OIIA_Goose.txt  info.md
scripts/: extract_goose.py
src/: frame0.svh  frame0_lut.sv  frame1.svh  frame2.svh  frame3.svh  frame_lut.sv  graphics.sv  graphics.v  grass_bg.sv  oiia_sound.sv  palette.svh  palette_lut.sv  project.sv  project.v  sound_module.sv  uw.svh  uw_bouncing.sv  vga_playground.v
test/: Makefile  tb.v  test.py
tools/: make_bitmaps.cpp
vga_playground/: goose_one_frame.v  lut_example.v  lut_example_rom.v  testing_border.v
